<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".notes.presentation.activity.NotesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="50dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:maxLines="2"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="27sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPersonalMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:maxLines="2"
            android:text="@string/personal_message_to"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotes" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPersonalMsg"
            tools:layout_editor_absoluteX="24dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/inter_extrabold"
                        android:maxLines="2"
                        android:text="Meena"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/inter_medium"
                        android:maxLines="1"
                        android:text="Tap to review 50+ notes"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btnContinue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <TextView
                android:id="@+id/tvInterested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:maxLines="2"
                android:text="@string/interested_in_you"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPremiumSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_medium"
                android:maxLines="2"
                android:text="@string/premium_members_can_view_all_their_likes_at_once"
                android:textColor="@color/grey"
                android:textSize="15sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:elevation="0dp"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="25dp"
            android:paddingVertical="13dp"
            android:text="@string/upgrade"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_height="263dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonalMsg"
                tools:layout_editor_absoluteX="24dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivLike1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/tvLikedUserName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/inter_extrabold"
                        android:text="Teena"
                        android:layout_marginStart="14dp"
                        android:layout_marginBottom="14dp"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_height="263dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonalMsg"
                tools:layout_editor_absoluteX="24dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivLike2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/tvLikedUserName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/inter_extrabold"
                        android:maxLines="2"
                        android:text="Beena"
                        android:layout_marginStart="14dp"
                        android:layout_marginBottom="14dp"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTintMode="@color/yellow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>